<resources>
    <string name="app_name">Stock App Demo</string>
    <string name="settings">Settings</string>
    <string name="settings_activity">Settings Activity</string>
    <string name="stock_details">Stock Details</string>
    <string name="fetch_stock_details">Fetch Stock Details</string>
    <string name="openprice">Open Price</string>
    <string name="current_price">Current Price</string>
    <string name="highest_intraday">Highest Intraday</string>
    <string name="lowest_intraday">Lowest Intraday</string>
    <string name="stock_symbol">Stock Symbol</string>
    <string name="enter_stock_symbol">Enter Stock Symbol</string>
</resources>